--- a/FRONTEND/src/style/includes/fonts.less
+++ b/FRONTEND/src/style/includes/fonts.less
@@ -1,5 +1,34 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600,600italic,400italic,300italic);
 
+.underline() {
+    position: relative;
+    color: inherit;
+    text-decoration: none;
+
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: currentColor;
+        transform: scale3d(0, 1, 1);
+        transition: transform 0.1s;
+        -webkit-transform: scale3d(0, 1, 1);
+        -webkit-transition: -webkit-transform 0.1s;
+    }
+
+    &:hover:before {
+        transform: scale3d(1, 1, 1);
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 0.3s;
+        -webkit-transform: scale3d(1, 1, 1);
+        -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        -webkit-transition-duration: 0.3s;
+    }
+}
+
 // weight
 .r {
     font-family: 'Source Sans Pro', sans-serif;
@@ -26,20 +55,41 @@ h1 {
     .screen-m({
         font-size: 3rem; /* 42/14 */
     });
+
+    * {
+        font-size: inherit;
+    }
 }
 
-h4 {
+h4,
+.text-style-h4 {
     .r;
     font-size: 1.714rem; /* 24/14 */
     line-height: 1.667em; /* 40/24 */
     margin-bottom: 18px;
+
+    * {
+        font-size: inherit;
+    }
+
+    a {
+        display: inline-block;
+        .underline();
+    }
 }
 
-h5 {
+h5,
+.text-style-h5 {
     .r;
     font-size: 1.286rem; /* 18/14 */
     line-height: 1.5em; /* 24/16 */
     margin-bottom: 16px;
+
+    p {
+        margin-bottom: 0;
+        font-size: inherit;
+        line-height: 34px;
+    }
 }
 
 .form-text {
@@ -48,6 +98,10 @@ h5 {
     .screen-m({
         font-size: 1.429rem; /* 20/14 */
     });
+
+    * {
+        font-size: inherit;
+    }
 }
 
 .info-text {
@@ -56,6 +110,10 @@ h5 {
     .screen-m({
         font-size: 1.286rem; /* 18/14 */
     });
+
+    * {
+        font-size: inherit;
+    }
 }
 
 .text {
@@ -71,5 +129,5 @@ p {
 .description {
     font-size: 1.1rem;
     line-height: 1.7em; /* 24/14 */
-    .l;
+    .r;
 }
