--- a/FRONTEND/src/style/style.less
+++ b/FRONTEND/src/style/style.less
@@ -16,5 +16,6 @@ General comments (optional).
 @import "includes/fonts.less";
 @import "includes/base.less";
 @import "includes/main.less";
+@import "includes/angebot.less";
 @import "includes/modal.less";
 @import "includes/mobile.less";
