--- a/FRONTEND/src/style/includes/base.less
+++ b/FRONTEND/src/style/includes/base.less
@@ -91,7 +91,7 @@
 @dark: #000;
 @lorange: #FFF6E8;
 @lgrey: #F2F1EF;
-@link: #279fd6;
+@link: #75AB07;
 @green: #75AB07;
 @button1: @green;
 @button2: @lorange;
@@ -115,15 +115,27 @@ a {
     cursor: pointer;
     transition: color 200ms linear;
     line-height: 100%;
-    text-decoration: underline;
+    text-decoration: none;
 }
 img {
     display: block;
     max-width: 100%;
 }
+
+strong {
+    font-weight: bold;
+}
+
+hr {
+    height: 0;
+    border: none;
+    border-top: 1px solid currentColor;
+    opacity: .1;
+}
+
 .container-fluid {
     width: 100%;
-    height: 100%;
+    // height: 100%;
 }
 .container {
     width: 100%;
@@ -188,7 +200,11 @@ form {
         /* 18/14 */
     }
     .form-field {
-        input,
+        input[type="text"],
+        input[type="email"],
+        input[type="number"],
+        input[type="tel"],
+        input[type="password"],
         textarea {
             padding: 11px 16px;
             background: none;
@@ -196,6 +212,14 @@ form {
             border-radius: 2px;
             min-width: 269px;
 
+        }
+
+        &[data-type="checkbox"] {
+            label {
+                display: inline-block;
+                vertical-align: top;
+                width: ~"calc(100% - 30px)";
+            }
         }
 
         .screen-m({
@@ -243,37 +267,53 @@ form {
     }
 }
 
-.button(@color) {
-    position: relative;
+input[type="checkbox"] {
+    max-width: 18px;
+    max-height: 18px;
+    width: 18px;
+    height: 18px;
+    border-radius: 2px;
+    outline: none;
+    -webkit-appearance: none;
+    margin-right: 6px;
+    background: #CCC;
+    display: inline-block;
+    vertical-align: top;
+    transition: background-color 200ms;
 
-    .btn,
-    button,
-    input[type="submit"] {
-        display: block;
-        // min-width: 180px;
-        position: relative;
-        border: 0;
-        border-radius: 2px;
-        background: @color;
-        // color: contrast(@color);
-        color: inherit;
-        z-index: 1;
-        cursor: pointer;
-        transition: transform 80ms linear;
-        text-decoration: none;
-        padding: 11px 28px;
-        text-align: center;
-        font-weight: bold;
-
-        .screen-small-pc({
-            padding: 11px 22px;
-        });
-
-        .screen-m({
-            margin: 32px 0 0;
-            font-size: 18px;
-        });
+    &:checked {
+        background-color: @green;
+        background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQiIGhlaWdodD0iMTAiIHZpZXdCb3g9IjAgMCAxNCAxMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNNSAxMEwwIDUuMTkybDEuNC0xLjM0Nkw1IDcuMzA4IDEyLjYgMCAxNCAxLjM0NnoiIGZpbGw9IiNGRkYiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 14px 10px;
     }
+}
+
+.btn,
+button,
+input[type="submit"] {
+    display: block;
+    // min-width: 180px;
+    position: relative;
+    border: 0;
+    border-radius: 2px;
+    color: inherit;
+    z-index: 1;
+    cursor: pointer;
+    transition: transform 80ms linear, background 150ms linear, top 150ms linear;
+    text-decoration: none;
+    padding: 11px 28px;
+    text-align: center;
+    font-weight: bold;
+
+    &[disabled] {
+        background: #c5c5c5 !important;
+        cursor: default !important;
+        top: 4px;
+        transform: none !important;
+    }
+
     &:before {
         content: '';
         position: absolute;
@@ -284,27 +324,50 @@ form {
         z-index: 0;
         opacity: 0.5;
         border-radius: 2px;
-        background: @color;
         transform: translate3d(0,3px,0);
         transition: transform 80ms linear;
+    }
+
+    &:active {
+        transform: translate3d(0,3px,0);
+    }
+
+    &:hover {
+        will-change: transform;
+    }
+
+    .screen-small-pc({
+        padding: 11px 22px;
+    });
+
+    .screen-m({
+        margin: 32px 0 0;
+        font-size: 18px;
+    });
+}
+
+.button(@color) {
+    position: relative;
+
+    .btn,
+    button,
+    input[type="submit"] {
+        background: @color;
+        // color: contrast(@color);
+    }
+
+    &:before {
+        background: @color;
     }
     &:hover {
         .btn,
         button,
         input[type="submit"] {
             background: darken(@color, 5%);
-            will-change: transform;
-        }
-        &:before {
-            will-change: transform;
         }
     }
+
     &:active {
-        .btn,
-        button,
-        input[type="submit"] {
-            transform: translate3d(0,3px,0);
-        }
         &:before {
             transform: translate3d(0,0,0);
         }
@@ -488,6 +551,21 @@ a.burger {
         }
     }
 }
+
+.file-item {
+    svg, span, a {
+        display: inline-block;
+        vertical-align: middle;
+        line-height: 1.2em;
+    }
+    svg {
+        padding: 0 2px;
+    }
+    span {
+        margin-right: 30px;
+    }
+}
+
 //lightslider
 body {
     .lSSlideOuter {
@@ -514,6 +592,327 @@ body {
                 &.active a {
                     background-color: @green;
                 }
+            }
+        }
+    }
+}
+
+.gallery-wrap {
+    &.extend {
+        .images {
+            height: auto;
+
+            .image {
+                opacity: 1 !important;
+                display: inline-block !important;
+            }
+        }
+        .show-more {
+            .show {
+                display: none;
+            }
+            .hide {
+                display: inline-block;
+            }
+            .arrow {
+                transform: rotate(0);
+            }
+        }
+    }
+
+    .images {
+        width: ~"calc(100% - -28px)";
+        height: 300px;
+        margin-left: -14px;
+        overflow: hidden;
+        letter-spacing: -8px;
+        line-height: 0;
+        // transition: height 200ms linear;
+
+        .image {
+            letter-spacing: normal;
+            line-height: normal;
+            text-align: left;
+            display: inline-block;
+            color: inherit;
+            text-decoration: none;
+            position: relative;
+            width: 25%;
+            padding: 0 14px 28px;
+            transition: opacity 350ms linear;
+
+            img {
+                display: none;
+            }
+
+            a {
+                position: relative;
+                padding-bottom: 100%;
+                width: 100%;
+                z-index: 1;
+                display: block;
+                background-color: #f7f7f7;
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+
+            .overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: fade(@dark, 40%);
+                color: @light;
+                padding: 24px 17px;
+                opacity: 0;
+                transition: opacity 350ms linear;
+                overflow: hidden;
+            }
+            &:hover {
+                .overlay {
+                    opacity: 1;
+                }
+            }
+        }
+
+        .image:nth-child(4n) ~ .image {
+            opacity: 0;
+        }
+
+        .screen-small-pc({
+            height: 280px;
+            .image {
+                padding: 0 10px 20px;
+
+                .overlay .text {
+                    font-size: .857rem; /* 12/14 */
+                }
+            }
+        });
+
+        .screen-tst({
+            height: 24.4vw;
+
+            .image {
+                padding: 0 1vw 2vw;
+                .overlay {
+                    padding: 5px;
+                    h5 {
+                        font-size: 12px;
+                        margin-bottom: 0px;
+                    }
+                    .text {
+                        font-size: 10px; /* 12/14 */
+                    }
+                }
+            }
+        });
+
+        .screen-m({
+            height: auto;
+            .image {
+                width: 100%;
+
+                a {
+                    background: none !important;
+                    padding: 0;
+                }
+                img {
+                    display: block;
+                }
+
+                .overlay {
+                    opacity: 1;
+                    background: @lorange;
+                    position: static;
+                    color: @dark;
+                    height: auto;
+                }
+            }
+
+            .image:nth-child(4n) ~ .image {
+                display: none;
+            }
+        });
+    }
+
+    .show-more {
+        line-height: 2;
+        margin-top: -4px;
+        text-align: center;
+        color: @green;
+        text-decoration: none;
+        display: block;
+
+        .show {
+            display: inline-block;
+        }
+        .hide  {
+            display: none;
+        }
+
+        .arrow {
+            display: inline-block;
+            padding: 0 8px;
+            transform: rotate(180deg);
+            transition: transform 280ms linear;
+        }
+        .screen-m({
+            margin-top: 18px;
+            });
+    }
+}
+
+// карточка товара
+.tarif-card {
+    text-align: center;
+    background: @light;
+
+    p {
+        margin: 0;
+        font-size: inherit !important;
+        line-height: inherit !important;
+    }
+
+    .header,.content {
+        border-bottom: 1px solid #E9EAEA;
+    }
+
+    .header {
+        padding: 32px 32px 24px;
+
+        .tarif-title {
+            font-size: 22px;
+            margin-bottom: 24px;
+        }
+
+        svg {
+            margin-right: 8px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+
+        span {
+            display: inline-block;
+            vertical-align: middle;
+            font-size: 16px;
+            line-height: 22px;
+        }
+    }
+
+    .content {
+        font-size: 16px;
+        padding: 16px 24px;
+        text-align: left;
+
+        .main {
+            margin-bottom: 32px;
+            line-height: 24px;
+
+            ul li {
+                min-height: 1.5em;
+                line-height: 1.5em;
+            }
+        }
+        .advanced {
+            padding: 0 3px;
+            svg, span {
+                display: inline-block;
+                vertical-align: middle;
+            }
+            svg {
+                margin-right: 10px;
+            }
+            span {
+                max-width: ~"calc(100% - 32px)";
+            }
+        }
+    }
+
+    .footer {
+        padding: 24px 32px 32px;
+
+        .price {
+            font-size: 13px;
+            color: #666;
+            margin-bottom: 8px;
+
+            strong {
+                font-size: 22px;
+                color: #000;
+            }
+        }
+
+        .subprice {
+            font-size: 16px;
+            line-height: 22px;
+            color: #666;
+        }
+
+        .btn-holder {
+            display: inline-block;
+            color: #fff;
+
+            .btn {
+                margin-top: 24px !important;
+            }
+        }
+
+        .info-holder {
+            margin-top: 30px;
+            font-size: 16px;
+            line-height: 22px;
+
+            .info-title {
+                display: block;
+            }
+
+            .info-text {
+                display: block;
+                margin-top: 8px;
+                font-size: 12px;
+                line-height: 15px;
+                opacity: .6;
+                line-height: 15px;
+            }
+        }
+    }
+
+    &.basic {
+        .header {
+            .tarif-title, svg {
+                color: #64B5F6;
+            }
+        }
+        .footer {
+            .btn-holder {
+                .button(#64B5F6);
+            }
+        }
+    }
+    &.medium {
+        .header {
+            .tarif-title, svg {
+                color: #8BC34A;
+            }
+        }
+        .footer {
+            .btn-holder {
+                .button(#8BC34A);
+            }
+        }
+    }
+    &.premium {
+        .header {
+            .tarif-title, svg {
+                color: #E57373;
+            }
+        }
+        .footer {
+            .btn-holder {
+                .button(#E57373);
             }
         }
     }
