--- a/FRONTEND/src/style/includes/base.less
+++ b/FRONTEND/src/style/includes/base.less
@@ -445,8 +445,12 @@ input[type="submit"] {
         display: table-cell;
         vertical-align: top;
     }
+    .image {
+        min-width: 50vw;
+    }
     .info {
         padding: 40px 60px;
+        max-width: 550px;
     }
 
     .info-wrapper {
