--- a/FRONTEND/src/style/includes/base.less
+++ b/FRONTEND/src/style/includes/base.less
@@ -90,7 +90,7 @@
 @light: #fff;
 @dark: #000;
 @lorange: #FFF6E8;
-@lgrey: #F2F1EF;
+@lgrey: #FFFEFC;
 @link: #75AB07;
 @green: #75AB07;
 @button1: @green;
@@ -318,8 +318,10 @@ input[type="submit"] {
         content: '';
         position: absolute;
         display: block;
+        left: 0;
         bottom: 0;
         width: 100%;
+        background: inherit;
         height: 6px;
         z-index: 0;
         opacity: 0.5;
@@ -330,6 +332,9 @@ input[type="submit"] {
 
     &:active {
         transform: translate3d(0,3px,0);
+        &:before {
+            transform: translate3d(0,0,0);
+        }
     }
 
     &:hover {
@@ -341,7 +346,6 @@ input[type="submit"] {
     });
 
     .screen-m({
-        margin: 32px 0 0;
         font-size: 18px;
     });
 }
@@ -356,9 +360,6 @@ input[type="submit"] {
         // color: contrast(@color);
     }
 
-    &:before {
-        background: @color;
-    }
     &:hover {
         .btn,
         button,
@@ -918,6 +919,93 @@ body {
             .btn-holder {
                 .button(#E57373);
             }
+        }
+    }
+}
+
+// Стили контента в постах
+.post-content {
+    overflow: hidden;
+
+    p {
+        margin: 1em 0;
+    }
+
+    img {
+        display: initial;
+        max-width: none;
+        max-height: none;
+    }
+
+    a {
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    h1,h2,h3,h4,h5,h6 {
+        display: block;
+        text-decoration: inherit;
+        border: 0;
+        margin: 1em 0;
+        padding: 0;
+        text-align: inherit;
+        font-weight: bold;
+    }
+
+    h1 {
+        font-size: 36pt;
+        margin: 0.6em 0;
+    }
+
+    h2 {
+        font-size: 24pt;
+        margin: 0.8em 0;
+    }
+
+    h3 {
+        font-size: 18pt;
+    }
+
+    h4 {
+        font-size: 14pt;
+        margin: 1.2em 0;
+    }
+
+    h5 {
+        font-size: 12pt;
+        margin: 1.33em 0;
+    }
+
+    h6 {
+        font-size: 10pt;
+    }
+
+    blockquote {
+        background: #f9f9f9;
+        border-left: 10px solid #ccc;
+        margin: 1.5em 10px;
+        padding: 0.5em 10px;
+        quotes: "\201C""\201D""\2018""\2019";
+    }
+    blockquote:before {
+        color: #ccc;
+        content: open-quote;
+        font-size: 4em;
+        line-height: 0.1em;
+        margin-right: 0.25em;
+        vertical-align: -0.4em;
+    }
+    blockquote p {
+        display: inline;
+    }
+
+    table {
+        width: 100% !important;
+
+        td {
+            padding: 15px;
         }
     }
 }
