--- a/FRONTEND/src/style/style.less
+++ b/FRONTEND/src/style/style.less
@@ -17,5 +17,6 @@ General comments (optional).
 @import "includes/base.less";
 @import "includes/main.less";
 @import "includes/angebot.less";
+@import "includes/blog.less";
 @import "includes/modal.less";
 @import "includes/mobile.less";
