--- a/FRONTEND/src/style/includes/base.less
+++ b/FRONTEND/src/style/includes/base.less
@@ -933,8 +933,8 @@ body {
 
     img {
         display: initial;
-        max-width: none;
-        max-height: none;
+        width: 100% !important;
+        height: auto !important;
     }
 
     a {
@@ -980,6 +980,10 @@ body {
 
     h6 {
         font-size: 10pt;
+    }
+
+    ul,ol {
+        padding: 0 0 0 27px;
     }
 
     blockquote {
