--- a/FRONTEND/src/style/includes/main.less
+++ b/FRONTEND/src/style/includes/main.less
@@ -345,9 +345,14 @@
     }
 
     .form-content {
+        max-width: 100%;
         display: inline-block;
         vertical-align: middle;
         padding: 0 30px;
+
+        .screen-m({
+            padding: 0;
+        });
     }
 
     .form-submit {
