--- a/FRONTEND/src/style/includes/angebot.less
+++ b/FRONTEND/src/style/includes/angebot.less
@@ -275,6 +275,14 @@
             min-width: 250px;
             max-width: 355px;
 
+            &.count-0 {
+                pointer-events: none;
+                filter: grayscale(100);
+                -webkit-filter: grayscale(100);
+                opacity: .8;
+                user-select: none;
+            }
+
             .screen-t({
                 padding: 0 8px;
             });
